<resources>
    <string name="app_name">Red Book animals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Red Book animals</string>
    <string name="nav_header_subtitle">ibashovabiybiruza@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="menu_invertebrates">Омыртқасызлар</string>
    <string name="menu_fishes">Балықлар</string>
    <string name="menu_mammals">Сүтемизиўшилер</string>
    <string name="menu_birds">Қуслар</string>
    <string name="menu_reptiles">Жербаўырлаўшилар</string>
    <string name="menu_favorite">Cайландылар</string>
    <string name="status">Status</string>
    <string name="propagation">Propagation</string>
    <string name="habitat">Habitat</string>
    <string name="quantity">Quantity</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="limiting_factors">Limiting factors</string>
    <string name="breeding">Breeding</string>
    <string name="security">Security</string>
    <string name="bookmark">Bookmark</string>
</resources>